Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -138,7 +138,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ba_latitude = coordinsates[]"
+    "ba_latitude = coordinsates[0]\n",
+    "ba_lati"
    ]
   },
   {
