--- a/index.ipynb
+++ b/index.ipynb
@@ -425,7 +425,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "la_boca_marker = naig"
+    "la_boca_marker = neighborh"
    ]
   },
   {
