--- a/index.ipynb
+++ b/index.ipynb
@@ -520,7 +520,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "recoleta_marker = None"
+    "recoleta_marker = neighborhood_marke"
    ]
   },
   {
